[metadata]
name = relic-tool-sga-core
version = attr: relic.sga.core.__version__

author = Marcus Kertesz
; author_email = author@example.com
description = Core files shared by versioned SGA files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ModernMAK/Relic-Tool-SGA-Core
project_urls =
    Bug Tracker = https://github.com/MAK-Relic-Tool/Issue-Tracker/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.9

install_requires =
    mak-serialization-tools
    relic-tool-core
    fs

[options.packages.find]
where = src